2004-01-21  Shaun McCance  <shaunm@gnome.org>

	* stylesheets/gettext.xsl:
	* stylesheets/l10n.xml.in:
	- Added string 'About This Article'.
	- Made gettext behave more nicely when a string isn't found.

2004-01-19  Shaun McCance  <shaunm@gnome.org>

	* stylesheets/db2html-division.xsl:
	* stylesheets/db2html-html.xsl:
	* stylesheets/db2html-toc.xsl:
	- Stylistic changes to the TOC.

2004-01-18  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	* stylesheets/db2html-param.xsl:
	- Nicer chunk depth determination.  Works decently well.

2004-01-17  Shaun McCance  <shaunm@gnome.org>

	* stylesheets/db2html-titlepage.xsl:
	* stylesheets/gettext.xsl:
	- Small changes to pluralized headers in titlepage.

2004-01-16  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-toc-pager.c:
	- Updated comment about bug #131745, now that I've filed the bug.

2004-01-15  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-base.c:
	- Relative path handling broke absolute-sans-scheme path handling.
	  Now fixed.

	* src/yelp-db-pager.c:
	- Handle XInclude.

	* src/yelp-toc-pager.c:
	- The parser context seems to fail on all files after a single bad XML
	  file, which I think is a bug in libxml2.  This caused a single bad
	  OMF file to bomb the whole TOC.  I've worked around the problem for
	  now by creating a new parser context after errors.

2004-01-14  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-base.c:
	- Don't require absolute path for a file given on the command line.

	* test/testdoc1/testdoc1.xml:
	- That really isn't my email address.  Really.

2004-01-12  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	- Changed Previous and Next to Previous Page and Next Page, per UI review.

2004-01-12  Richard Hult  <richard@imendio.com>

	* src/yelp-toc-pager.c (menu_write_page): Set encoding to utf-8 in
	the generated html. Fixes bug #131186.

2004-01-11  Shaun McCance  <shaunm@gnome.org>

	* src/Makefile.am:
	* src/test-pager.c:
	* src/yelp-db-pager.c: