@@ -1,5 +1,11 @@
 2004-01-21  Shaun McCance  <shaunm@gnome.org>
 
+	* src/yelp-window.c:
+	- Fixed annoying double-history thing with first page.  Again.
+	- Fixed history problem when loading anything external.
+
+2004-01-21  Shaun McCance  <shaunm@gnome.org>
+
 	* stylesheets/gettext.xsl:
 	* stylesheets/l10n.xml.in:
 	- Added string 'About This Article'.
